[gd_scene load_steps=20 format=2]

[ext_resource path="res://Grafik/Assets/GUI/MenuArrow.png" type="Texture" id=1]
[ext_resource path="res://Szenen/GUI/ElectricSolver.gd" type="Script" id=2]
[ext_resource path="res://Szenen/GUI/BtnMainMenuBg.tscn" type="PackedScene" id=3]
[ext_resource path="res://Szenen/DG/TipsTable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Grafik/Assets/GUI/emptyframesmall.png" type="Texture" id=5]
[ext_resource path="res://Szenen/DG/JumpToPageTable.tscn" type="PackedScene" id=6]
[ext_resource path="res://Szenen/Levels/AufgabenFrame.gd" type="Script" id=9]
[ext_resource path="res://Grafik/Assets/GUI/Menu.png" type="Texture" id=10]
[ext_resource path="res://Szenen/DG/EdgesLogic.gd" type="Script" id=12]
[ext_resource path="res://Szenen/DG/KnodesLogic.gd" type="Script" id=13]
[ext_resource path="res://Grafik/Theme/new_dynamicfont.tres" type="DynamicFont" id=14]
[ext_resource path="res://Szenen/DG/TableszeneSkript.gd" type="Script" id=15]
[ext_resource path="res://Szenen/DG/MenuDown.tscn" type="PackedScene" id=17]
[ext_resource path="res://Szenen/DG/ModulLogik.gd" type="Script" id=18]

[sub_resource type="DynamicFontData" id=97]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque.ttf"

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = SubResource( 97 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.482968, 45.2548 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -234, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Bg/Arrow:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 55.7153, 33.1285 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFontData" id=4]
font_path = "res://fonts/Terminal-Grotesque-master/Terminal-Grotesque-master/terminal-grotesque_open.otf"

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 1
outline_color = Color( 1, 0.462745, 0.47451, 1 )
font_data = SubResource( 4 )

[node name="AufgabenListe" type="Node2D"]
script = ExtResource( 9 )

[node name="Table" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="tisch" type="ColorRect" parent="Table"]
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 2
color = Color( 0.12549, 0.2, 0.282353, 1 )

[node name="Edges" type="Node2D" parent="Table"]
script = ExtResource( 12 )

[node name="Knodes" type="Node2D" parent="Table"]
script = ExtResource( 13 )

[node name="ElectricSolver" type="Node" parent="Table"]
script = ExtResource( 2 )

[node name="GUI" type="Node2D" parent="Table"]

[node name="MenuDown" parent="Table/GUI" instance=ExtResource( 17 )]

[node name="Modules" type="Node2D" parent="Table"]
script = ExtResource( 18 )

[node name="YSort" type="YSort" parent="Table/Modules"]

[node name="AufgabenFrame" type="Node2D" parent="."]

[node name="Bg" type="Sprite" parent="AufgabenFrame"]
position = Vector2( 143.25, 152.429 )
scale = Vector2( 1.36968, 1.36968 )
texture = ExtResource( 10 )

[node name="Arrow" type="Sprite" parent="AufgabenFrame/Bg"]
visible = false
texture = ExtResource( 1 )

[node name="Titel" type="Label" parent="AufgabenFrame"]
margin_left = 20.0
margin_top = 30.0
margin_right = 247.0
margin_bottom = 67.0
custom_colors/font_color = Color( 1, 0.803922, 0.615686, 1 )
custom_fonts/font = SubResource( 1 )
text = "Erreiche folgende Ziele:"
align = 1
valign = 1

[node name="Control" type="Control" parent="AufgabenFrame"]
margin_left = 239.771
margin_top = 38.8087
margin_right = 263.771
margin_bottom = 62.8087
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AufgabenFrame"]
margin_left = 30.0
margin_top = 69.0
margin_right = 241.0
margin_bottom = 235.0
rect_min_size = Vector2( 180, 160 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="VBoxContainer" parent="AufgabenFrame/ScrollContainer"]
margin_right = 211.0
margin_bottom = 166.0
rect_min_size = Vector2( 180, 160 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="AufgabenFrame"]
anims/aufgSlideOut = SubResource( 2 )

[node name="Node2D" type="Node2D" parent="AufgabenFrame"]
position = Vector2( 21, 104 )

[node name="zurueck" parent="AufgabenFrame/Node2D" instance=ExtResource( 3 )]
position = Vector2( 113.791, 144.511 )
scale = Vector2( 1, 1.2 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="AufgabenFrame"]
margin_left = 38.0
margin_top = 236.0
margin_right = 232.0
margin_bottom = 261.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 0.462745, 0.47451, 1 )
custom_fonts/font = ExtResource( 14 )
text = "Zur Aufgaben√ºbersicht"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="JumpToPage" parent="." instance=ExtResource( 6 )]

[node name="showTips" type="Label" parent="."]
margin_left = 1230.0
margin_top = 12.0
margin_right = 1270.0
margin_bottom = 48.0
mouse_filter = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.988235, 0.854902, 0.533333, 1 )
custom_fonts/font = SubResource( 5 )
text = "?"
align = 1
valign = 1

[node name="TipsTable" parent="." instance=ExtResource( 4 )]
visible = false

[connection signal="gui_input" from="AufgabenFrame/Control" to="." method="_on_Control_gui_input"]
[connection signal="clicked" from="AufgabenFrame/Node2D/zurueck" to="." method="_on_zurueck_clicked"]
[connection signal="gui_input" from="showTips" to="." method="_on_showTips_gui_input"]
